# k-helpdesk-wiki

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.bak_20251224  README.md  alembic.ini  claude_desktop_config.json  init_db.py  main.py  mcp_server.py  onboarding.md  onboarding_tmp.html  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.json
.serena/: project.yml
.serena/memories/: api_audit_report_20251212.md  manual_vectors_analysis.md  project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion.md  vector_embedding_timeline_and_data.md
alembic/: env.py
alembic/versions/: 20250214_0001_fr17_manual_flag.py  20251205_0955_943361c7c44d_initial_schema_from_models.py  20251205_1640_8851865e5633_update_user_model_fields_add_employee_.py  20251206_0001_reviewer_to_employee_id_string.py  20251208_2257_b9e54cc56a05_fr_15_add_common_code_management.py  20251211_0001_group_fields.py  (+13 more)
app/: __init__.py
docs/: 20241219_swagger_authorize_fix.md  2025-12-10_manual_version_group_refactoring.md  2025-12-11_manual_version_group_refactoring_execution_plan.md  20250214_fr17_manual_flag.md  20251211_Design_Implementation_v2.1.md  20251211_Design_Implementation_v2.2_미구현.md  20251211_Implementation_Phase2_5_Summary.md  20251211_ManualVersioning.md  20251211_ManualVersioning_v2.1.md  20251211_ManualVersioning_v2.md  20251216_API_Common_Response.md  20251216_Multiple_Manuals_UnitSpec_Final.md  20251216_동일그룹승인메뉴얼.md  20251218_E5_Embeddings_v1.1_CORRECTED_Report.md  20251218_E5_Embeddings_v1.1_Violations_and_Refactoring.md  20251218_LocalE5_Embeddings_UnitSpec.md  20251218_상담검색_설정참조수정.md  20251218_임베딩워밍업교체.md  20251219_FR-20_검토_태스크_노출_제어_UnitSpec.md  20251219_FR19_부서사용자매핑.md  20251219_사용자_관리_UnitSpec.md  20251219_사용자_인증_접근제어.md  20251221_매뉴얼검색_OpenAPI_스펙수정.md  20251221_사용자_username_삭제_사번전환.md  20251222_SQLAlchemyAsyncORM_전체_마이그레이션_가이드.md  20251222_SQLAlchemy_비동기_ORM_표준_적용_리팩터링.md  20251222_메뉴얼_상세_조회_eager_load.md  20251222_부서_수정_PUT_API.md  20251222_전체_마이그레이션_가이드_UnitSpec.md  20251223_벡터_테이블_알렘빅_생성.md  20251223_초기_마이그레이션_정상화.md  20251224_관리자계정자동생성.md  20251224_상담_metadata_fields_컬럼_정정.md  FR15_COMMON_CODE_IMPLEMENTATION.md  FR15_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_START_REVIEW_TASK.md  INDEX_v2.1_Implementation.md  MANUAL_WORKFLOW_AND_VERSIONING.md  MANUAL_WORKFLOW_ISSUES_AND_IMPROVEMENTS.md  MCP_SETUP.md  (+11 more)
(+110 files in other folders)
